[gd_scene format=3 uid="uid://c3aflwcfg4sgl"]

[ext_resource type="Script" uid="uid://fm1gloh7h61b" path="res://day.gd" id="1_lqptk"]
[ext_resource type="Texture2D" uid="uid://833lq6rkersh" path="res://art/placeholders/pawn.png" id="1_q5e70"]
[ext_resource type="Texture2D" uid="uid://dxwmhw5cssa7" path="res://art/ground.png" id="2_8msho"]
[ext_resource type="Texture2D" uid="uid://nctf6uke6b8x" path="res://art/placeholders/pentagon_outline.png" id="2_jak2h"]
[ext_resource type="Texture2D" uid="uid://cweusm3jk2j0r" path="res://art/background.png" id="3_dvden"]
[ext_resource type="Texture2D" uid="uid://f127hl21vt3v" path="res://art/placeholders/pentagon_question.png" id="3_wybox"]
[ext_resource type="Texture2D" uid="uid://bq3rbgpuu3to4" path="res://art/decor1.png" id="4_58ipk"]
[ext_resource type="Texture2D" uid="uid://bc1p76ig0gvla" path="res://art/decor2.png" id="5_fe8xe"]
[ext_resource type="Texture2D" uid="uid://b3kf560wgqeaw" path="res://art/houses.png" id="5_yh4v0"]
[ext_resource type="Texture2D" uid="uid://b0084dhctr2ot" path="res://art/cloud 1 .png" id="6_asg04"]
[ext_resource type="Texture2D" uid="uid://ct83e5gptqs6p" path="res://art/cloud 2.png" id="7_1p1ot"]

[sub_resource type="Animation" id="Animation_lqptk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lbl_Goal:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7gchi"]
resource_name = "anim_show_goal"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lbl_Goal:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.9666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Start_Day"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Lbl_Time_Left:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kbc73"]
_data = {
&"RESET": SubResource("Animation_lqptk"),
&"anim_show_goal": SubResource("Animation_7gchi")
}

[node name="Day" type="Node2D" unique_id=311523632]
script = ExtResource("1_lqptk")
follower_count = 10
move_duration = 2.0

[node name="Background" type="Node2D" parent="." unique_id=1947651675]

[node name="Sky" type="ColorRect" parent="Background" unique_id=190095974]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grass" type="ColorRect" parent="Background" unique_id=1313414157]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 582.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.74, 0.74, 0.74, 1)

[node name="Cloud1" type="Sprite2D" parent="Background" unique_id=1230482268]
position = Vector2(378, 288)
scale = Vector2(0.28000066, 0.28000066)
texture = ExtResource("6_asg04")

[node name="Cloud2" type="Sprite2D" parent="Background" unique_id=941521833]
position = Vector2(1512.0001, 274)
scale = Vector2(0.40000063, 0.40000063)
texture = ExtResource("7_1p1ot")

[node name="Decor1" type="Sprite2D" parent="Background" unique_id=960912743]
position = Vector2(1717, 576.00006)
scale = Vector2(0.40000063, 0.40000063)
texture = ExtResource("4_58ipk")

[node name="Decor2" type="Sprite2D" parent="Background" unique_id=1548165386]
position = Vector2(373.00003, 576.00006)
scale = Vector2(0.40000063, 0.40000063)
texture = ExtResource("5_fe8xe")

[node name="Houses" type="Sprite2D" parent="Background" unique_id=168003343]
position = Vector2(1910, 457.99997)
scale = Vector2(0.1999994, 0.1999994)
texture = ExtResource("5_yh4v0")

[node name="Ground" type="Sprite2D" parent="Background" unique_id=840422672]
position = Vector2(951.00006, 800)
scale = Vector2(-1.8305382, 0.40178698)
texture = ExtResource("2_8msho")

[node name="Background" type="Sprite2D" parent="Background" unique_id=1858068879]
position = Vector2(993.00006, 471.00003)
scale = Vector2(1.8399999, 0.28000033)
texture = ExtResource("3_dvden")

[node name="Totem" type="Node2D" parent="." unique_id=322201034]
position = Vector2(961, 500)
scale = Vector2(0.5, 0.5)

[node name="Body" type="Sprite2D" parent="Totem" unique_id=1753183159]
self_modulate = Color(0.60784316, 0.60784316, 0.60784316, 1)
position = Vector2(0, 184.66693)
scale = Vector2(1.5625, 2.5520835)
texture = ExtResource("1_q5e70")

[node name="Face" type="Node2D" parent="Totem" unique_id=1953811161]
position = Vector2(0, -130)

[node name="Offerings" type="Node2D" parent="." unique_id=334423806]
visible = false
position = Vector2(960, 715)
rotation = 3.1415925
scale = Vector2(0.45, 0.45)

[node name="Basket_Empty" type="Sprite2D" parent="Offerings" unique_id=279181620]
texture = ExtResource("2_jak2h")

[node name="Basket_Full" type="Sprite2D" parent="Offerings" unique_id=724755178]
visible = false
texture = ExtResource("3_wybox")

[node name="Followers" type="Node2D" parent="." unique_id=872276873]
position = Vector2(960, 600)

[node name="Spawn" type="Node2D" parent="Followers" unique_id=1408881905]
position = Vector2(0, 584)
scale = Vector2(0.5, 0.5)

[node name="Pos_1" type="Marker2D" parent="Followers/Spawn" unique_id=1498094559]
position = Vector2(-2336, 0)

[node name="Pos_2" type="Marker2D" parent="Followers/Spawn" unique_id=555016011]
position = Vector2(-1120, 0)

[node name="Pos_3" type="Marker2D" parent="Followers/Spawn" unique_id=1618933220]
position = Vector2(48, 0)

[node name="Pos_4" type="Marker2D" parent="Followers/Spawn" unique_id=779553453]
position = Vector2(1120, 0)

[node name="Pos_5" type="Marker2D" parent="Followers/Spawn" unique_id=615690373]
position = Vector2(2048, 0)

[node name="Group" type="Node2D" parent="Followers" unique_id=771897524]
position = Vector2(0, 96)
scale = Vector2(0.5, 0.5)

[node name="Pos_1" type="Marker2D" parent="Followers/Group" unique_id=640055930]
position = Vector2(-480, -96)

[node name="Pos_2" type="Marker2D" parent="Followers/Group" unique_id=1467570760]

[node name="Pos_3" type="Marker2D" parent="Followers/Group" unique_id=1284349725]
position = Vector2(528, -96)

[node name="Camera2D" type="Camera2D" parent="." unique_id=24029318]
position = Vector2(960, 540)

[node name="Canvas" type="CanvasLayer" parent="." unique_id=1072350791]

[node name="Margin_Goal" type="MarginContainer" parent="Canvas" unique_id=411460452]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 25

[node name="VBox_Goal" type="VBoxContainer" parent="Canvas/Margin_Goal" unique_id=1573353845]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="Canvas/Margin_Goal/VBox_Goal" unique_id=957192335]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Lbl_Goal" type="Label" parent="Canvas/Margin_Goal/VBox_Goal" unique_id=1485648699]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "FIND THE HERETIC!"
horizontal_alignment = 1

[node name="Lbl_Time_Left" type="Label" parent="Canvas/Margin_Goal/VBox_Goal" unique_id=70012152]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "10"
horizontal_alignment = 1

[node name="Anim_Goal" type="AnimationPlayer" parent="Canvas/Margin_Goal/VBox_Goal" unique_id=1877851894]
libraries/ = SubResource("AnimationLibrary_kbc73")
autoplay = &"anim_show_goal"

[node name="Pnl_Results" type="Panel" parent="Canvas/Margin_Goal" unique_id=2107447449]
visible = false
layout_mode = 2

[node name="VBox_Results" type="VBoxContainer" parent="Canvas/Margin_Goal/Pnl_Results" unique_id=1451686035]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Lbl_Results" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results" unique_id=1435118272]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Daily Results"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results" unique_id=883508817]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="HBoxContainer" type="HBoxContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results" unique_id=1243750521]
layout_mode = 2

[node name="Lbl_Required" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer" unique_id=986854612]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "FOLLOWERS NEEDED"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer" unique_id=616323116]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Lbl_Required_Num" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer" unique_id=1331187911]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results" unique_id=881706003]
layout_mode = 2

[node name="Lbl_Base_Mask" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer2" unique_id=1291836286]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "FROM MASK"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer2" unique_id=112787186]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Lbl_Base_Mask_Num" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer2" unique_id=1424556229]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results" unique_id=2100620728]
layout_mode = 2

[node name="Lbl_Mask_Multi" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer5" unique_id=1537291655]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "MASK MULTIPLIER"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer5" unique_id=1025125355]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Lbl_Mask_Multi_X" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer5" unique_id=1562777906]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "x"
horizontal_alignment = 1

[node name="Lbl_Mask_Multi_Num" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer5" unique_id=1689093352]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer5" unique_id=1719772876]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Lbl_Flip_Results_Label" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer5" unique_id=381829752]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Flip:"

[node name="Lbl_Flip_Results" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer5" unique_id=1535129297]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "2 x 3"

[node name="HBoxContainer3" type="HBoxContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results" unique_id=144828250]
visible = false
layout_mode = 2

[node name="Lbl_Required" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer3" unique_id=588268738]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "REQUIRED FOLLOWERS"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer3" unique_id=1973898267]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Lbl_Required_Num" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer3" unique_id=369555664]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results" unique_id=1356196014]
layout_mode = 2

[node name="Lbl_Total" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer4" unique_id=188361361]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "TOTAL"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer4" unique_id=1290958856]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Lbl_Total_Num" type="Label" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results/HBoxContainer4" unique_id=381829751]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results" unique_id=2046795285]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="Bttn_Next" type="Button" parent="Canvas/Margin_Goal/Pnl_Results/VBox_Results" unique_id=389349076]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "CONTINUE/RESTART"
